# struckdown

./: .gitignore  Cargo.toml  Makefile  README.md
src/: event.rs  html.rs  lib.rs  parser.rs  renderer.rs
struck/: Cargo.toml  README.md
struck/example/: attach-source-info.py  process.yml  role.md  role.py  role.yml  struckdown.py  syntect.md  syntect.yml  video-directive.py  video.md  video.yml
struck/src/: main.rs
struckdown/: Cargo.toml  README.md
struckdown/src/: event.rs  html.rs  lib.rs  parser.rs  pipeline.rs  plain.rs
struckdown/src/processors/: autoanchors.rs  external.rs  html_sanitizer.rs  mod.rs  syntect.rs  toc.rs  utils.rs
struckdown/src/snapshots/: struckdown__pipeline__basic_pipeline.snap
struckdown/tests/: test_parser.rs  test_snapshots.rs
struckdown/tests/inputs/: code.md  ext_autoanchors.md  ext_autoanchors_max_level.md  ext_broken.md  ext_cat.md  ext_closed_stdin.md  ext_html_sanitizer.md  ext_html_sanitizer_defaults.md  ext_perl.md  ext_syntect.md  ext_toc.md  ext_toc_limit.md  headings.md  hello.md  html.md  lists.md
struckdown/tests/snapshots/: test_html__basics@ext_autoanchors.md.snap  test_html__basics@footnotes.md.snap  test_html__basics@frontmatter.md.snap  test_html__basics@html.md.snap  test_html__basics@role.md.snap  test_html__basics@table.md.snap  test_parser__basics@ext_autoanchors.md.snap  test_parser__basics@frontmatter.md.snap  test_parser__basics@links.md.snap  test_parser__basics@lists.md.snap  test_snapshots__html@code.md.snap  test_snapshots__html@directives.md.snap  test_snapshots__html@ext_autoanchors.md.snap  test_snapshots__html@ext_autoanchors_max_level.md.snap  test_snapshots__html@ext_broken.md.snap.new  test_snapshots__html@ext_cat.md.snap  test_snapshots__html@ext_closed_stdin.md.snap  test_snapshots__html@ext_html_sanitizer.md.snap  test_snapshots__html@ext_html_sanitizer_defaults.md.snap  test_snapshots__html@ext_perl.md.snap  test_snapshots__html@ext_syntect.md.snap  test_snapshots__html@ext_toc.md.snap  test_snapshots__html@ext_toc_limit.md.snap  test_snapshots__html@footnotes.md.snap  test_snapshots__html@frontmatter.md.snap  test_snapshots__html@headings.md.snap  test_snapshots__html@hello.md.snap  test_snapshots__html@html.md.snap  test_snapshots__html@links.md.snap  test_snapshots__html@lists.md.snap  test_snapshots__html@role.md.snap  test_snapshots__html@table.md.snap  test_snapshots__parser@code.md.snap  test_snapshots__parser@directives.md.snap  test_snapshots__parser@ext_autoanchors.md.snap  test_snapshots__parser@ext_autoanchors_max_level.md.snap  test_snapshots__parser@ext_broken.md.snap.new  test_snapshots__parser@ext_cat.md.snap  test_snapshots__parser@ext_closed_stdin.md.snap  test_snapshots__parser@ext_html_sanitizer.md.snap  (+14 more)
tests/: test_html.rs  test_parser.rs
tests/inputs/: directives.md  footnotes.md  frontmatter.md  headings.md  links.md  role.md  table.md
tests/snapshots/: test_html__basics@directives.md.snap  test_html__basics@headings.md.snap  test_html__basics@hello.md.snap  test_html__basics@links.md.snap  test_html__basics@lists.md.snap  test_html__basics@role.md.snap  test_html__basics@table.md.snap  test_parser__basics@directives.md.snap  test_parser__basics@footnotes.md.snap  test_parser__basics@headings.md.snap  test_parser__basics@hello.md.snap  test_parser__basics@html.md.snap  test_parser__basics@links.md.snap  test_parser__basics@lists.md.snap  test_parser__basics@role.md.snap  test_parser__basics@table.md.snap  test_parser__basics@text.md.snap
