[package]
name = "struck"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struckdown = { path = "../struckdown" }
argh = "0.1.4"
anyhow = "1.0.35"
serde_json = "1.0.60"
