[package]
name = "struckdown"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A structured markdown / commonmark library for Rust"
homepage = "https://github.com/mitsuhiko/struckdown"
repository = "https://github.com/mitsuhiko/struckdown"
keywords = ["cmark", "commonmark", "markdown", "rst"]
readme = "README.md"

[features]
default = ["external-processor", "syntect-processor", "html-sanitizer-processor"]
external-processor = ["tokio", "subprocess"]
syntect-processor = ["syntect"]
html-sanitizer-processor = ["ammonia", "uuid"]

[dependencies]
pulldown-cmark = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
regex = "1.4.2"
lazy_static = "1.4.0"
v_htmlescape = "0.11.0"
itertools = "0.9.0"
serde_yaml = "0.8.14"
slug = "0.1.4"
serde_json = { version = "1.0.60", features = ["preserve_order"] }
subprocess = { version = "0.2.6", optional = true }
tokio = { version = "0.3.6", features = ["rt", "process", "macros", "io-util"], optional = true }
syntect = { version = "4.5.0", optional = true }
ammonia = { version = "3.1.0", optional = true }
uuid = { version = "0.8.1", features = ["v4"], optional = true }

[dev-dependencies]
insta = { version = "1.3.0", features = ["glob"] }
