[package]
name = "struckdown"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A structured markdown / commonmark library for Rust"
homepage = "https://github.com/mitsuhiko/struckdown"
repository = "https://github.com/mitsuhiko/struckdown"
keywords = ["cmark", "commonmark", "markdown", "rst"]
readme = "README.md"

[features]
default = ["external-processor", "syntect-processor", "html-sanitizer-processor", "autoanchors-processor"]
external-processor = ["tokio"]
syntect-processor = ["syntect"]
html-sanitizer-processor = ["ammonia", "uuid"]
autoanchors-processor = ["slug"]

[dependencies]
pulldown-cmark = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
regex = "1.4.2"
lazy_static = "1.4.0"
v_htmlescape = "0.12.0"
serde_yaml = "0.8.14"
slug = { version = "0.1.4", optional = true }
serde_json = { version = "1.0.60", features = ["preserve_order"] }
tokio = { version = "1.0.0", features = ["rt", "process", "macros", "io-util"], optional = true }
syntect = { version = "4.5.0", optional = true }
ammonia = { version = "3.1.0", optional = true }
uuid = { version = "0.8.1", features = ["v4"], optional = true }
either = "1.6.1"

[dev-dependencies]
insta = { version = "1.3.0", features = ["glob"] }
